test/files/neg/t708.check
t708.scala:8: error: overriding type S in trait X with bounds <: A.this.T;
 type S has incompatible type
    override private[A] type S = Any;
                             ^
one error found
